@@ -34,6 +34,7 @@ require_once(t3lib_extMgm::extPath('oelib') . 'contrib/PEAR/Mail/mime.php');
  * @subpackage tx_oelib
  *
  * @author Saskia Metzler <saskia@merlin.owl.de>
+ * @author Oliver Klee <typo3-coding@oliverklee.de>
  */
 abstract class tx_oelib_abstractMailer {
 	/**
@@ -87,7 +88,7 @@ abstract class tx_oelib_abstractMailer {
 	/**
 	 * Sends an tx_oelib_Mail object.
 	 *
-	 * @param tx_oelib_Mail the tx_oelib_Mail object to send
+	 * @param tx_oelib_Mail $email the tx_oelib_Mail object to send
 	 */
 	public function send(tx_oelib_Mail $email) {
 		if (!$email->hasSender()) {
@@ -129,16 +130,19 @@ abstract class tx_oelib_abstractMailer {
 			'text_charset' => $characterSet,
 			'html_charset' => $characterSet,
 		);
-		$subject =  t3lib_div::encodeHeader(
+		$subject = t3lib_div::encodeHeader(
 			$email->getSubject(), 'quoted-printable', $characterSet
 		);
+
+		$body = $mimeEMail->get($buildParameter);
+		$headers = $mimeEMail->txtHeaders();
 
 		foreach ($email->getRecipients() as $recipient) {
 			$this->mail(
 				$recipient->getEMailAddress(),
 				$subject,
-				$mimeEMail->get($buildParameter),
-				$mimeEMail->txtHeaders()
+				$body,
+				$headers
 			);
 		}
 	}
